Update Vote phase of game + improve error handling